# GSPy

./: .gitignore  LICENSE  MANIFEST.in  README.md  compmap.map  f_AMcontrol.py  f_BaseComponent.py  f_TurboComponent.py  f_TurboComponent.py.bak  f_ambient.py  f_base_component.py  f_bleedflow.py  f_combustor.py  f_compressor.py  f_compressormap.py  f_control.py  f_coolingflow.py  f_duct.py  f_exhaust.py  f_exhaustdiffuser.py  f_exhaustnozzle.py  f_fan.py  f_fuel.py  f_gaspath.py  f_global.py  f_inlet.py  f_main.py  f_main.py.BASE.py  f_main.py.REMOTE.py  f_map.py  f_mapplot.py  f_shaft.py  f_system.py  f_turbine.py  f_turbine.py.bak  f_turbinemap.py  f_turbo_component.py  f_turbofan.py  f_turbomap.py  f_utils.py  (+9 more)
data/: TJET.csv
data/fluid_props/: jetsurf_noPAH.yaml  make_jetsurf_noPAH.py  mechanisms.txt
data/sample_maps/: bigfand.map  turbimap.map
doc/: Build your own gas turbine performance model from scratch.pptx  Build your own gas turbine performance model from scratch_rev1.docx
docs/: class_diagram.md
input/: Turbojet_AMinput.csv
old/: compressor_map.csv
projects/T-S_diagram/: air.py
projects/file_utils/: class_hierarchy.py  file_structure_to_text.py
projects/map_viewer/: demo_plot_compressor_map.py  demo_plot_turbine_map.py  map_plotter.py
projects/plotting/: station_plot.py
projects/turbofan/: turbofan.py  turbofan_AS755.py  turbofan_N1control.py
projects/turbojet/: turbojet ambient_AS210.py  turbojet.py  turbojet_AM.py  turbojet_AM_LM.py  turbojet_AS755y.py  turbojet_DPeq.py  (+5 more)
tests/: run_model_test.py  run_turbojet_test.py  turbojet.py
(+57 files in other folders)
